--- a/lib/nchosts/templates/aliases.erb
+++ b/lib/nchosts/templates/aliases.erb
@@ -1,3 +1,3 @@
 <% instances.each do |instance| %>
-alias <%= instance['instanceId'] %><% instance['account']['suffix'] %>="ssh <%= instance['ipAddress'] %>"
+alias <%= instance['instanceId'] %><%= instance['account']['suffix'] %>="ssh <%= instance['ipAddress'] %>"
 <% end %>
